@@ -1,3 +1,7 @@
+2014-03-03  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 11.8.0 Released.
+
 2014-03-01  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 11.8.0-rc3 Released.
